@@ -12,6 +12,10 @@ ECL 0.9k:
 
  - Improved hashing on 64-bit machines.
 
+ - The physical pathname format has changed from [device:][[//hostname]/]...
+   to [[device:[//hostname]]/]... The reason is that this allows proper
+   parsing of Unix pathnames such as "//usr/".
+
 * CLOS:
 
  - When caching generic function calls, ECL now uses a thread-local hash table
